name:                emu-mos6502-asm-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wayofthepie/emu-mos6502-asm-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen O'Brien
maintainer:          wayofthepie@gmail.com
copyright:           2017 Author name here
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Assembler
  build-depends:
    base >=4.9 && <4.10
    , megaparsec >= 5.2.0 && < 6.0
    , text >= 1.2.2.1 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable emu-mos6502-asm-blog
  hs-source-dirs:      src
  main-is:
    Main.hs
  other-modules:
    Assembler
  default-language:    Haskell2010
  build-depends:
    base
    , megaparsec
    , text

test-suite assembler-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:
    Main.hs
  build-depends:
    base
    , hspec
    , hspec-megaparsec >= 0.3.1 && < 0.4.0
    , megaparsec
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-hspec
    , tasty-smallcheck
    , tasty-quickcheck
    , text
    , emu-mos6502-asm-blog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
